--- a/src/styles/Toast.css
+++ b/src/styles/Toast.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .Toast *
 {    
     outline: none;
@@ -9,7 +11,7 @@
 }
 .toast-ltr *
 {
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--global-toast-font);
 }
 .toast-custom-icon
 {
@@ -31,6 +33,7 @@
     --dark-sh-cr: 0 1px 10px 0 #00000010;
     --dark-border-cr: #4d4d4d;
     --light-border-cr: #eeeeee;
+    --global-toast-font: 'Roboto', sans-serif;
     padding: 20px;        
     box-sizing: border-box;
     width: 400px;
@@ -190,7 +193,7 @@
 }
 .Toast span
 {
-    font-weight: 600;
+    font-weight: 700;
 }
 .Toast p
 {
@@ -238,6 +241,7 @@
 {
     display: flex;
     flex-direction: column;
+    gap: 5px;
 }
 .toast-details-container > span
 {
