--- a/src/styles/ToastWrapper.css
+++ b/src/styles/ToastWrapper.css
@@ -1,5 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap');
 
 .ToastWrapper
@@ -14,14 +14,16 @@
     overflow-y: auto;
     overflow-x: visible;    
     z-index: 1;
+    --global-toast-wrapper-font: 'Roboto', sans-serif;
 }
 .ToastWrapper *
-{   
+{
+    -webkit-tap-highlight-color: transparent;
     margin: 0;
 }
 .toast-wrapper-ltr *
 {
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--global-toast-wrapper-font);
 }
 .toast-wrapper-rtl *
 {
